# fastapi_zero

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  coverage_report.py  database.db  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml  pipeline.yaml
fastapi_zero/: app.py  models.py  schemas.py  security.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/versions/: 0fb4b862b992_create_users_table.py  1cf7ed38ede2_create_users_table.py  2023f516582a_add_datetime_update_on_table.py  3a54a9ccbe81_create_todos_table.py  3b71e3ec2df9_create_users_table.py  650c003bb88b_add_fields_created_at_and_updated_at_in_.py  653ac65ea4cc_create_users_table.py  806d52062762_create_users_table.py  ea0d017a17ea_create_users_table.py  fcf66db199c9_create_users_table.py
misc/: coverage-report.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
